--- a/docs/marquee.css
+++ b/docs/marquee.css
@@ -4,7 +4,7 @@
   width: 100%;
   box-sizing: border-box;
   padding: 1em 0;
-  margin-bottom: 2em;
+  border-top: 1px solid #888;
   border-bottom: 1px solid #888;
 }
 
